--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "nuxt --hostname '0'",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
   "dependencies": {
     "@nuxt/content": "^1.14.0",
-    "@tailwindcss/forms": "^0.3.3",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
   },
