--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -61,6 +61,7 @@ collections:
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Description", name: "description", widget: "string" }
+      - { label: "Image", name: "image", widget: "image", required: false }
       - {
           label: "Start time",
           name: "start",
