--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -28,6 +28,39 @@ collections:
           widget: "number",
           value_type: "float",
           min: 0,
+          required: false,
+        }
+      - {
+          label: "Description",
+          name: "description",
+          widget: "text",
+          required: false,
+        }
+      - { label: "Image", name: "image", widget: "image" }
+
+  - name: "none_stretched_canvas"
+    label: "Works on None Stretched Canvas"
+    folder: "content/work/none_stretched_canvas"
+    create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    editor:
+      preview: false
+    fields:
+      - { label: "Name", name: "title", widget: "string" }
+      - { label: "Medium", name: "medium", widget: "string" }
+      - {
+          label: "Dimensions",
+          name: "dimensions",
+          widget: "string",
+          required: false,
+        }
+      - {
+          label: "Price",
+          name: "price",
+          widget: "number",
+          value_type: "float",
+          min: 0,
+          required: false,
         }
       - {
           label: "Description",
