--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,7 +8,7 @@ public_folder: /img
 collections:
   - name: "abstract_landscapes"
     label: "Abstract Landscapes"
-    folder: "content/work/abstract_landscapes"
+    folder: "content/work/abstract-landscapes"
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     editor:
@@ -38,9 +38,9 @@ collections:
         }
       - { label: "Image", name: "image", widget: "image" }
 
-  - name: "none_stretched_canvas"
+  - name: "none-stretched-canvas"
     label: "Works on None Stretched Canvas"
-    folder: "content/work/none_stretched_canvas"
+    folder: "content/work/works-on-none-stretched-canvas"
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     editor:
@@ -75,7 +75,7 @@ collections:
     folder: "content/categories"
     format: "frontmatter"
     create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    slug: "{{slug}}"
     editor:
       preview: false
     fields:
